--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,11 @@
 .btn:hover{
   cursor: pointer;
 }
+
+.blur{
+  background: rgb(253, 122, 71);
+  position: absolute;
+  border-radius: 50%;
+  filter: blur(212px);
+  z-index: -9;
+}
