--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -183,3 +183,105 @@
     color: white;
     font-size: 1.5rem;
 }
+
+.hero-blur{
+    width: 22rem;
+    height: 30rem;
+    left: 0;
+}
+
+@media screen and (max-width: 768px) {
+    .hero {
+        flex-direction: column;
+    }
+  
+    .hero-blur {
+        width: 14rem;
+    }
+  
+    .the-best-ad {
+        margin-top: 0;
+        font-size: small;
+        align-self: center;
+        transform: scale(0.8);
+        position: relative; 
+    }
+  
+    .the-best-ad > span {
+        z-index: 2;
+    }
+  
+    .the-best-ad > div {
+        position: absolute;
+        background-color: var(--red);
+        width: 50%; 
+        height: 100%;
+        left: 40%; 
+        transform: translateX(-50%); 
+        bottom: 0;
+        border-radius: 3rem;
+        z-index: 1;
+    }
+
+    .hero-text{
+        font-size: xx-large;
+        justify-content: center;
+    }
+
+    .hero-text>div:nth-of-type(3){
+        font-size: small;
+        font-weight: 200;
+        letter-spacing: 1px;
+        text-align: center;
+    }
+
+    .hero-buttons{
+        justify-content: center;
+    }
+
+    .figures>div>span:nth-of-type(1){
+        font-size: large;
+    }
+
+    .figures>div>span:nth-of-type(2){
+        font-size: x-small;
+    }
+
+    .right-h{
+        position: relative;
+        background: none;
+    }
+
+    .heart-rate{
+        left: 1rem;
+        top: 2rem;
+    }
+    
+    .calories{
+        position: relative;
+        top: 4rem;
+        left: 3rem;
+    }
+    .calories>img{
+        width: 2rem;
+    }
+
+    .calories>div>:nth-child(2){
+        color: white;
+        font-size: 1rem;
+    }
+
+    .hero-image{
+        position: relative;
+        width: 15rem;
+        left: 7rem;
+        top: 4rem;
+        align-self: center;
+    }
+
+    .hero-image-back{
+        width: 15rem;
+        left: 2rem;
+        top: 0rem;
+    }
+}
