--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -27,6 +27,12 @@
     cursor: pointer;
 }
 
+.yt, .twitter{
+    width: 1.8rem !important;
+    height: 2.5rem !important;
+    margin-top: 0.3rem;
+}
+
 .logo-f>img{
     width: 10rem;
 }
